--- a/app/src/main/res/layout/activity_historial_global.xml
+++ b/app/src/main/res/layout/activity_historial_global.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    android:background="@mipmap/fondo"
-    >
+    android:background="@mipmap/fondo">
 
     <TextView
         android:id="@+id/txtTitulo"
@@ -51,6 +50,16 @@
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/txtTanquesTotal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- ⭐ GRÁFICO CIRCULAR ⭐ -->
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/pieChartUsuarios"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/txtDispositivosTotal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
